tests/NormalTests/paczka1/small_fuzzy/92602478.err
Error in line 4: 3wrQk0 A895 12,3
Error in line 1: f375QSd A895 5,1
Error in line 6: f375QSd A356 6,6
